Fix z-index of request form dropdown so that it doesn't go below navbar

--- a/public/stylesheets/request.css
+++ b/public/stylesheets/request.css
@@ -10,3 +10,8 @@
 #make-request {
     margin-bottom: 40px;
 }
+
+.dropdown-menu {
+    /* make sure the dropdown menu won't get hidden under the navbar */
+    z-index: 99999;
+}
